environments/home/host/files/etc/ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow tcp 22 0.0.0.0/0 any 0.0.0.0/0 OpenSSH - in
-A ufw-user-input -p tcp --dport 22 -j ACCEPT -m comment --comment 'dapp_OpenSSH'

### tuple ### allow tcp 80 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 80 -j ACCEPT

### tuple ### allow tcp 443 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 443 -j ACCEPT

### tuple ### allow any 9987 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 9987 -j ACCEPT
-A ufw-user-input -p udp --dport 9987 -j ACCEPT

### tuple ### allow any 10011 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 10011 -j ACCEPT
-A ufw-user-input -p udp --dport 10011 -j ACCEPT

### tuple ### allow any 30033 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 30033 -j ACCEPT
-A ufw-user-input -p udp --dport 30033 -j ACCEPT

### tuple ### allow udp 9987 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 9987 -j ACCEPT

### tuple ### allow tcp 10011 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 10011 -j ACCEPT

### tuple ### allow tcp 30033 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 30033 -j ACCEPT

### tuple ### allow tcp 2377 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 2377 -j ACCEPT

### tuple ### allow tcp 7946 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 7946 -j ACCEPT

### tuple ### allow udp 7946 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 7946 -j ACCEPT

### tuple ### allow udp 4789 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 4789 -j ACCEPT

### tuple ### allow tcp 8080 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 8080 -j ACCEPT

### tuple ### allow udp 16261 0.0.0.0/0 any 0.0.0.0/0 in comment=505a2067616d65
-A ufw-user-input -p udp --dport 16261 -j ACCEPT

### tuple ### allow udp 16262 0.0.0.0/0 any 0.0.0.0/0 in comment=505a20646972656374
-A ufw-user-input -p udp --dport 16262 -j ACCEPT

### tuple ### allow tcp 30030 0.0.0.0/0 any 192.168.1.0/24 in comment=505a2047726166616e61204c414e
-A ufw-user-input -p tcp --dport 30030 -s 192.168.1.0/24 -j ACCEPT

### tuple ### allow tcp 6443 192.168.1.176 any 10.42.0.0/16 in comment=505a20636c757374657220686f737420616363657373
-A ufw-user-input -p tcp -d 192.168.1.176 --dport 6443 -s 10.42.0.0/16 -j ACCEPT

### tuple ### allow tcp 10250 192.168.1.176 any 10.42.0.0/16 in comment=505a20636c757374657220686f737420616363657373
-A ufw-user-input -p tcp -d 192.168.1.176 --dport 10250 -s 10.42.0.0/16 -j ACCEPT

### tuple ### allow tcp 9109 192.168.1.176 any 10.42.0.0/16 in comment=505a20636c757374657220686f737420616363657373
-A ufw-user-input -p tcp -d 192.168.1.176 --dport 9109 -s 10.42.0.0/16 -j ACCEPT

### tuple ### allow tcp 30031 0.0.0.0/0 any 192.168.1.0/24 in comment=557074696d65204b756d61204c414e
-A ufw-user-input -p tcp --dport 30031 -s 192.168.1.0/24 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
